Configuracion inicial microservicio auth

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: frontend
+        - id: SmartGrid-frontend
           uri: http://localhost:8082
           predicates:
-            - Path=/login, /validar-cliente, /validar-empleado
+            - Path=/index, /css/**, /img/**, /js/**, /
 
-        - id: auth-service
-          uri: http://localhost:8081
+        - id: authservice
+          uri: http://localhost:8080
           predicates:
             - Path=/auth/**, /oauth2/**, /login/oauth2/**
